force-app/main/default/objects/cwbtool__CWB_Setup__c/fields/cwbtool__ErrorLog__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__ErrorLog__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you want to log exception for the debug.</inlineHelpText>
    <label>Error Log</label>
    <type>Checkbox</type>
</CustomField>