force-app/main/default/objects/cwbtool__CWB_Setup__c/fields/cwbtool__Include_Managed_Package_Detail__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Include_Managed_Package_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Managed Package Detail</label>
    <type>Checkbox</type>
</CustomField>