force-app/main/default/objects/cwbtool__CWB_Setup__c/fields/cwbtool__IncludeHistoryShareFeedObject__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__IncludeHistoryShareFeedObject__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Include History,Share Feed object in basic report</inlineHelpText>
    <label>Include History,Share Feed object</label>
    <type>Checkbox</type>
</CustomField>