force-app/main/default/objects/cwbtool__CWB_Setup__c/fields/cwbtool__LogUserDetailInHistory_Log__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__LogUserDetailInHistory_Log__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Log User Name,Email,User Id and Name in history log.</inlineHelpText>
    <label>Log User Detail in History Log</label>
    <type>Checkbox</type>
</CustomField>